# speech-to-text-pipeline

./: Makefile  README.md  classifier_model.py  main.py  preprocess.py  pyproject.toml  requirements.txt  result.txt  test.ipynb
config/model/: bert.yaml
data/: D0420-S1-T02.json
models/: bert.py  lstm.py
preprocess/: normalize.py
